syntax = "proto3";

option csharp_namespace = "EventStore";

package events;

// The greeting service definition.
service EventStore {
  // Sends a greeting
  rpc GetEvents (EventRequest) returns (stream EventReply);
}

message EventRequest {
  int64 prepare_position = 1;
  int64 commit_position = 2;
  repeated string event_types = 3;
  string stream_name = 4;
  bool subscribe = 5;
}

message EventReply {
  int64 prepare_position = 1;
  int64 commit_position = 2;
  bytes payload = 3;
  string event_type = 4;
}


